--- a/index.html
+++ b/index.html
@@ -14,6 +14,27 @@
 <link href="https://fonts.googleapis.com/css2?family=Rubik+Spray+Paint&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet"> 
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+
+    <!-- Primary Meta Tags -->
+<meta name="title" content="LyraLabs AI">
+<meta name="description" content="Lyra is a fast, minimal AI chatbot you can run locally with your own API key. Talk, imagine, learn – all on your terms.">
+
+<!-- Canonical -->
+<link rel="canonical" href="https://lyralabs.lonewolffsd.in/" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://lyralabs.lonewolffsd.in/">
+<meta property="og:title" content="LyraLabs AI">
+<meta property="og:description" content="Lyra is a fast, minimal AI chatbot you can run locally with your own API key. Talk, imagine, learn – all on your terms.">
+<meta property="og:image" content="https://yourlyraurl.com/og-image.jpg">
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:url" content="https://lyralabs.lonewolffsd.in/">
+<meta name="twitter:title" content="LyraLabs AI">
+<meta name="twitter:description" content="Fast, beautiful, and voice-enabled. Lyra lets you chat privately, locally, and freely. Bring your own OpenAI key and go.">
+<meta name="twitter:image" content="https://yourlyraurl.com/twitter-image.jpg">
     <style>
       body {
         ::-webkit-scrollbar {
@@ -102,6 +123,24 @@
         cursor: pointer;
       }
     </style>
+
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "SoftwareApplication",
+  "name": "LyraLabs AI",
+  "operatingSystem": "Web",
+  "applicationCategory": "AI Chatbot",
+  "url": "https://lyralabs.lonewolffsd.in/",
+  "description": "Lyra is a locally-runnable AI chatbot with a clean UI and voice support. Requires your own OpenAI API key.",
+  "image": "https://yourlyraurl.com/lyra-icon.png",
+  "author": {
+    "@type": "Person",
+    "name": "LonewolfFSD",
+    "url": "https://lonewolffsd.in"
+  }
+}
+    </script>
 </head>
   <body>
     <div id="root"></div>
